<resources>
    <string name="app_name">UAS_Yuda</string>
    <string name="judulapps">FOTO COPY</string>
    <string name="kodebarang">Code Barang</string>
    <string name="jumlahbarang">Jumlah</string>
    <string name="kalkulasi">Hitung</string>
    <string name="input_barang">Input Barang</string>
    <string name="TABLE">TODO</string>
    <string name="total_harga">Total Harga:</string>
    <string name="harga_barang">Harga Barang:</string>
    <string name="nama_barang">Nama Barang :</string>
    <string name="kode">Masukkan Kode Barang</string>
    <string name="jumlah">Masukkan Jumlah Barang</string>
</resources>