<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:background="#B36B00"
    android:paddingRight="25dp"
    android:paddingLeft="25dp"
    android:paddingTop="100dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView

        android:text="@string/judulapps"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/kodebarang"/>
        <EditText
            android:hint="@string/kode"
            android:labelFor="@+id/kode"
            android:layout_marginStart="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/etKodeBarang"
            android:inputType="textPersonName"
            android:lines="1"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/jumlahbarang"/>
        <EditText
            android:hint="@string/jumlah"
            android:labelFor="@+id/etJumlah"
            android:layout_marginStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/etJumlahBarang"
            android:inputType="numberDecimal"
            android:autofillHints="" />
    </LinearLayout>


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnKalkulasi"
        android:text="@string/kalkulasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/nama_barang"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/tvNama_Barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:text="@string/harga_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/tvHarga_Barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="18sp"
        android:text="@string/total_harga"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/tvTotal_Harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>